# teacher-1

./: .gitignore  .pre-commit-config.yaml  manage.py  pyproject.toml
teacher_1/: asgi.py  settings.py  urls.py  wsgi.py
users/: models.py
