[tool.poetry]
name = "teacher-1"
version = "0.1.0"
description = ""
authors = ["Meir Garfinkel <meirgarfinkel@gmail.com>"]
readme = "README.md"
packages = [{include = "teacher_1"}]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.1"
psycopg2-binary = "^2.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
