[tool.black]
line-length = 105
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.vim
  | \.vscode
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 105

[tool.poetry]
name = "teacher-1"
version = "0.1.0"
description = ""
authors = ["Meir Garfinkel <meirgarfinkel@gmail.com>"]
readme = "README.md"
packages = [{include = "teacher_1"}]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.1"
psycopg2-binary = "^2.9.3"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
djlint = "^1.15.0"
pytest = "^7.1.3"
pytest-random-order = "^1.0.4"
flake8-django = "^1.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
